disponibilização de facilidade de status

--- a/tokens.html
+++ b/tokens.html
@@ -41,10 +41,10 @@
 	<div id="nav">
 	<ul>
 		<li><span onclick="toFrontEnd('HOME')"> Home</span></li>
-		<li><span onclick="toFrontEnd('HATOKENS')">Token</span></li>
-		<li><span onclick="toFrontEnd('HSTATIST')">Estatísticas</span></li>
-		<li><span onclick="toFrontEnd('HGCLASS')">Grafo Classes</span></li>
+		<li><span onclick="toFrontEnd('HATOKENS')">Criar</span></li>
+		<li><span onclick="toFrontEnd('HLTOKENS')">Listar</span></li>
 		<li><span onclick="toFrontEnd('HVERBET')">Verbetes</span></li>
+		<li><span onclick="toFrontEnd('HSTATUS')">Estatísticas</span></li>
 	</ul>
 	</div>
 </div>
