Melhoria da integração com o módulo de verbetes

--- a/to_help/token_apresentacao.html
+++ b/to_help/token_apresentacao.html
@@ -1,20 +1,28 @@
-<h1 id="lead"><span class="section">Facilidades:</span> Árvore Hierárquica</h1>
+<h1 id="lead"><span class="section">Módulo:</span> Tokens - Árvore Hierárquica</h1>
 <h2>Módulo Tokens da Superinterface</h2>
 
-<p><img src="to_images/token_arvorehierarquica.png" alt="Arvore" width="200" height="186" class="floatRight" />Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla faci </p>
+<p><img src="to_images/token_arvorehierarquica.png" alt="Arvore" width="200" height="186" class="floatRight" />Bem vind@ ao Módulo Tokens da Superinterface</p><br />
+<p>As facilidades aqui disponíveis ampliam o alcance da Superinterface, possibilitando interessantes análises das informações presentes nos arquivos que constituem o seu acervo. O módulo foi pensado com base no conceito de Árvore Hierárquica, que é uma estrutura de dados cujos elementos estão organizados de forma hierárquica.</p>
 
-<h2>Árvore Hierárquica</h2>
+<br /><p>Esperamos que as facilidades disponíveis neste módulo sejam de grande utilidade para seus objetivos.</p>
 
-<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla faci </p>
+<br /><h2>Árvore Hierárquica</h2>
+<p>No nosso contexto, dados hierárquicos são uma coleção de dados onde cada item tem um único pai e zero ou mais filhos (com exceção do item raiz, que não tem pai). Toda utilização deste módulo da Superinterface se inicia na modelagem da Árvore Hierárquica que segue o modelo de conjunto aninhado ("Nested Set Model"). O analista constrói a Árvore Hierárquica de sua realidade, e o restante o módulo fará sozinho. Essa árvore é informada ao sistema através de uma planilha.</p>
 
-<h2>Integração</h2>
+<br /><p>O modelo de conjunto aninhado é uma técnica para representar conjuntos de informações aninhadas (também conhecidos como árvores ou hierarquias) em bancos de dados relacionais. Cada informação ocupa um nó da árvore e estes nós são numerados de acordo com o percurso de árvore.</p>
+<img src="to_images/token_nestedset.png" alt="nested set model" width="450" height="181" class="floatRight" />
 
-<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla faci </p>
 
-<h2>Facilidades de Uso e Manual</h2>
+<br /><h2>Integração</h2>
 
-<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla faci </p>
+<p>A Superinterface possui um corpo central que se ocupa da gestão dos arquivos do acervo, bem como módulos complementares que trazem novas funcionalidades ao sistema.</p>
+<br /><p>Cada módulo encapsula uma série de funcionalidades bem definidas, de forma independente, objetivando ser utilizado com outros componentes para formar um sistema mais complexo. Este módulo, ampliando as facilidades da Superinterface, gesta um conjunto de "tokens" que vem a possibilitar análises de informações contidas no acervo de arquivos da Superinterface. Também faz uso de serviços de dados prestados pelo Módulo de Verbetes.</p>
 
-<h2>Como Obter os Melhores resultados</h2>
+<br /><h2>Facilidades de Uso e Manual</h2>
 
-<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla faci </p>
+<p>Tudo foi pensado para que a utilização deste módulo fosse uma tarefa muito fácil, quase de forma intuitiva. Tuda utilização do módulo se faz através deste portal, que funciona também como um guia interativo para o usuário.  De qualquer forma, estimulamos o usuário a ter conhecimento da documentação do módulo e de como construir sua Árvore Hierárquica acessando a <a href="./to_docs/token_documentacao.php" target="_blank">documentação do módulo através deste documennto</a>.</p>
+
+<br /><h2>Apoio ao Projeto</h2>
+<p>Este projeto é mais uma ação do Programa Wash - Workshop Aficionados em Software e Hardware, sem o qual este projeto não teria sido possível. </p>
+<br /><p>O Programa Wash desenvolve atividades educacionais não formais, as quais tem como principais objetivos a promoção da iniciação científica e a popularização da ciência para estudantes do ensino fundamental, com a participação de estudantes do ensino técnico, médio e de graduação – principalmente da rede pública. Conheça o Programa Wash!</p>
+<a href="http://www.wash.net.br" target="_blank" /><img src="to_images/token_washImage.png" alt="imagem do logo do Programa Wash" width="450" height="111" class="floatcenter" /></a>
