--- a/to_help/token_atokens.html
+++ b/to_help/token_atokens.html
@@ -1,7 +1,9 @@
-<h3>Adicionar Token</h3>Esta facilidade possibilita adicionar tokens a árvore hierárquica. É realizada através de 3 etapas, utilizando-se de formulários.
+<h3>Cria Token</h3>Esta facilidade possibilita adicionar tokens a árvore hierárquica. É realizada através de 3 etapas, utilizando-se de formulários.
 
 <h3>Formulário 1</h3>Possibilita ao usuário selecionar a classe PAI para a qual o token deverá pertencer. O usuário deverá clicar no botão "Selecionar".  <p>Somente quando o nome da classe escolhida aparecer na caixa "amarela" é que a seleção da classe PAI estará concluída.</p>
 
 <h3>Formulário 2</h3>Possibilita ao usuário selecionar a SUB-CLASSE, onde o token será inserido na base de dados com uma referência a esta sub-classe. O usuário deverá clicar no botão "Selecionar".  <p>Somente quando a sub-classe escolhida aparecer na caixa "amarela" é que a seleção estará concluída.</p>
 
 <h3>Formulário 3</h3>Possibilita ao usuário digitar o token e esperar a resposta do servidor informando se a operação foi bem sucedida ou houve alguma falha na operação. <p>A resposta do servidor será mostrada na caixa amarela.</p>
+
+<h3>Documentação</h3>A documentação do módulo pode ser encontrada <a href="./to_docs/token_documentacao.php" target="_blank">neste documento</a>.
