--- a/to_help/token_verbetes.html
+++ b/to_help/token_verbetes.html
@@ -1,1 +1,5 @@
-<h3>Verbetes</h3>Esta facilidade possibilita....
+<h3>Verbetes</h3>No âmbito deste projeto, o termo verbete assume o significado de qualquer palavra que conste em algum arquivo do acervo da Superinterface.
+<p>Este conjunto de palavras é fonte de análises afim de revelar conhecimentos sobre o acervo.</p>
+<h3>O Módulo</h3>De forma bem resumida, o Módulo Verbete é composto de dois arquivos: o instalador do módulo e um serviço web de comunicação fornecedor dos verbetes - no estilo arquitetural REST (Web services RESTful).
+<p>O módulo não possui um portal ou outro serviço de comunicação direta com o internauta, mas sim é responsável pelas facilidades de captura das palavras presentes nos arquivos do acervo, bem como a comunicação destes verbetes para outros módulos requisitantes.</p>
+
