melhoria no controle dos tempos das requisições ajax

--- a/to_help/token_apresentacao.html
+++ b/to_help/token_apresentacao.html
@@ -1,6 +1,4 @@
-<h1 id="lead"><span class="section">Módulo:</span> Tokens - Árvore Hierárquica</h1>
-<h2>Módulo Tokens da Superinterface</h2>
-
+<br /><h2>Módulo Tokens da Superinterface</h2>
 <p><img src="to_images/token_arvorehierarquica.png" alt="Arvore" width="200" height="186" class="floatRight" />Bem vind@ ao Módulo Tokens da Superinterface</p><br />
 <p>As facilidades aqui disponíveis ampliam o alcance da Superinterface, possibilitando interessantes análises das informações presentes nos arquivos que constituem o seu acervo. O módulo foi pensado com base no conceito de Árvore Hierárquica, que é uma estrutura de dados cujos elementos estão organizados de forma hierárquica.</p>
 
