--- a/tokens.html
+++ b/tokens.html
@@ -41,7 +41,7 @@
 	<div id="nav">
 	<ul>
 		<li><span onclick="toFrontEnd('HOME')"> Home</span></li>
-		<li><span onclick="toFrontEnd('HATOKENS')">Criar</span></li>
+		<li><span onclick="toFrontEnd('HCTOKENS')">Criar</span></li>
 		<li><span onclick="toFrontEnd('HLTOKENS')">Listar</span></li>
 		<li><span onclick="toFrontEnd('HVERBET')">Verbetes</span></li>
 		<li><span onclick="toFrontEnd('HSTATUS')">Estatísticas</span></li>
@@ -53,6 +53,9 @@
 
 <div id="secondary"></div>
 <!--main content goes here-->
+<!-- <div id="mensagens"><p class="visib">AAAA</p></div> -->
+<div id="mensag" class="invisib">AAA</div>
+<div id="titulo"></div>
 <div id="main"></div>
 
 <div id="footer">Copyleft 2022, <a href="http://www.wash.net.br" target="_blank">ProjetoWash</a> </div>
